[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oxdna_torch"
version = "0.1.0"
description = "Differentiable oxDNA potential in PyTorch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["oxdna_torch*"]